--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
     <groupId>com.dev7ex</groupId>
     <artifactId>luchta</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
+
     <modules>
         <module>luchta-bukkit</module>
     </modules>
@@ -16,7 +17,8 @@
         <maven.compiler.source>${project.source.version}</maven.compiler.source>
         <maven.compiler.target>${project.source.version}</maven.compiler.target>
 
-        <project.source.version>16</project.source.version>
+        <project.version>1.1.0-SNAPSHOT</project.version>
+        <project.source.version>15</project.source.version>
 
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
