--- a/luchta-bukkit/src/main/resources/config.yml
+++ b/luchta-bukkit/src/main/resources/config.yml
@@ -5,9 +5,12 @@
 # | |___| |_| | (__| | | | || (_| |
 # |______\__,_|\___|_| |_|\__\__,_|
 # Copyright (c) 2022 by Dev7ex
-# Version: 1.0.0
+# Version: 1.1.0
 
 settings:
   chat-enabled: true
   chat-format: '%prefix% %name% §8» §7%message%'
   tablist-enabled: true
+  # Should all players with the permission (luchta.update.notify)
+  # get a update notification message when entering server
+  update-message: true
